fix: increase z-index of bottom navbar to be on top of experience-type buttons

--- a/src/styles/pages/index/base.css
+++ b/src/styles/pages/index/base.css
@@ -65,7 +65,7 @@
   bottom: 0;
   left: 0;
   padding: 1.5rem 1.25rem;
-  z-index: 5;
+  z-index: 199;
 }
 
 .two-circles-icon-wrapper {
